--- a/config/database.yml
+++ b/config/database.yml
@@ -6,12 +6,14 @@
 #
 default: &default
   adapter: sqlite3
+  #adapter: postgresql
   pool: 5
   timeout: 5000
 
 development:
   <<: *default
   database: db/development.sqlite3
+  #database: db/my_database_development
 
 # Warning: The database defined as "test" will be erased and
 # re-generated from your development database when you run "rake".
@@ -19,7 +21,9 @@ development:
 test:
   <<: *default
   database: db/test.sqlite3
+  #database: db/my_database_test
 
 production:
   <<: *default
   database: db/production.sqlite3
+  #database: db/my_database_production
